var/cr.F90

#ifdef USE_IEEE_INTRINSIC
#define SFMA IEEE_FMA
#define DFMA IEEE_FMA
#ifdef __GFORTRAN__
#define XFMA IEEE_FMA
#endif
#ifndef __NVCOMPILER
#define QFMA IEEE_FMA
#endif
#else
#ifdef USE_NATIVE
#define SFMA(A,B,C) ((A) * (B) + (C))
#define DFMA(A,B,C) ((A) * (B) + (C))
#ifdef __GFORTRAN__
#define XFMA(A,B,C) ((A) * (B) + (C))
#endif
#ifndef __NVCOMPILER
#define QFMA(A,B,C) ((A) * (B) + (C))
#endif
#else
  INTERFACE
     PURE FUNCTION SFMA(A, B, C) BIND(C,NAME='fmaf')
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL32
       IMPLICIT NONE
       REAL(KIND=REAL32), INTENT(IN), VALUE :: A, B, C
       REAL(KIND=REAL32) :: SFMA
     END FUNCTION SFMA
  END INTERFACE
  INTERFACE
     PURE FUNCTION DFMA(A, B, C) BIND(C,NAME='fma')
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL64
       IMPLICIT NONE
       REAL(KIND=REAL64), INTENT(IN), VALUE :: A, B, C
       REAL(KIND=REAL64) :: DFMA
     END FUNCTION DFMA
  END INTERFACE
#ifdef __GFORTRAN__
  INTERFACE
     PURE FUNCTION XFMA(A, B, C) BIND(C,NAME='fmal')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_long_double
       IMPLICIT NONE
       REAL(KIND=c_long_double), INTENT(IN), VALUE :: A, B, C
       REAL(KIND=c_long_double) :: XFMA
     END FUNCTION XFMA
  END INTERFACE
#endif
#ifndef __NVCOMPILER
  INTERFACE
#ifdef __GFORTRAN__
#ifdef __GFC_REAL_10__
     PURE FUNCTION QFMA(A, B, C) BIND(C,NAME='fmaq')
#else
     PURE FUNCTION QFMA(A, B, C) BIND(C,NAME='fmal')
#endif
#else
     PURE FUNCTION QFMA(A, B, C) BIND(C,NAME='__fmaq')
#endif
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL128
       IMPLICIT NONE
       REAL(KIND=REAL128), INTENT(IN), VALUE :: A, B, C
       REAL(KIND=REAL128) :: QFMA
     END FUNCTION QFMA
  END INTERFACE
#endif
#endif
#endif
#define CFMA(A,B,C) CMPLX(SFMA(REAL(A),REAL(B),SFMA(-AIMAG(A),AIMAG(B),REAL(C))),SFMA(REAL(A),AIMAG(B),SFMA(AIMAG(A),REAL(B),AIMAG(C))),REAL32)
#define ZFMA(A,B,C) CMPLX(DFMA(REAL(A),REAL(B),DFMA(-AIMAG(A),AIMAG(B),REAL(C))),DFMA(REAL(A),AIMAG(B),DFMA(AIMAG(A),REAL(B),AIMAG(C))),REAL64)
#ifdef __GFORTRAN__
#define WFMA(A,B,C) CMPLX(XFMA(REAL(A),REAL(B),XFMA(-AIMAG(A),AIMAG(B),REAL(C))),XFMA(REAL(A),AIMAG(B),XFMA(AIMAG(A),REAL(B),AIMAG(C))),c_long_double)
#endif
#ifndef __NVCOMPILER
#define YFMA(A,B,C) CMPLX(QFMA(REAL(A),REAL(B),QFMA(-AIMAG(A),AIMAG(B),REAL(C))),QFMA(REAL(A),AIMAG(B),QFMA(AIMAG(A),REAL(B),AIMAG(C))),REAL128)
#ifdef USE_NATIVE
#define CR_SQRTQ SQRT
#else
  INTERFACE
#ifdef __GFORTRAN__
#ifdef __GFC_REAL_10__
     PURE FUNCTION CR_SQRTQ(X) BIND(C,NAME='cr_sqrtq')
#else
     PURE FUNCTION CR_SQRTQ(X) BIND(C,NAME='sqrtl')
#endif
#else
     PURE FUNCTION CR_SQRTQ(X) BIND(C,NAME='cr_sqrtq')
#endif
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL128
       IMPLICIT NONE
       REAL(KIND=REAL128), INTENT(IN), VALUE :: X
       REAL(KIND=REAL128) :: CR_SQRTQ
     END FUNCTION CR_SQRTQ
  END INTERFACE
#endif
#endif
   INTERFACE CR_SINCOS
     PURE SUBROUTINE CR_SINCOSF(X, S, C) BIND(C,NAME='cr_sincosf')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_float
       IMPLICIT NONE
       REAL(KIND=c_float), INTENT(IN), VALUE :: X
       REAL(KIND=c_float), INTENT(OUT) :: S, C
     END SUBROUTINE CR_SINCOSF
      PURE SUBROUTINE CR_SINCOSD(X, S, C) BIND(C,NAME='cr_sincos')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_double
       IMPLICIT NONE
       REAL(KIND=c_double), INTENT(IN), VALUE :: X
       REAL(KIND=c_double), INTENT(OUT) :: S, C
     END SUBROUTINE CR_SINCOSD
  END INTERFACE CR_SINCOS
#ifdef USE_NATIVE
#define CR_RSQRT(X) (1.0 / SQRT(X))
#else
  INTERFACE CR_RSQRT
     PURE FUNCTION CR_RSQRTF(X) BIND(C,NAME='cr_rsqrtf')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_float
       IMPLICIT NONE
       REAL(KIND=c_float), INTENT(IN), VALUE :: X
       REAL(KIND=c_float) :: CR_RSQRTF
     END FUNCTION CR_RSQRTF
     PURE FUNCTION CR_RSQRTD(X) BIND(C,NAME='cr_rsqrt')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_double
       IMPLICIT NONE
       REAL(KIND=c_double), INTENT(IN), VALUE :: X
       REAL(KIND=c_double) :: CR_RSQRTD
     END FUNCTION CR_RSQRTD
#ifdef __GFC_REAL_10__
     PURE FUNCTION CR_RSQRTL(X) BIND(C,NAME='cr_rsqrtl')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_long_double
       IMPLICIT NONE
       REAL(KIND=c_long_double), INTENT(IN), VALUE :: X
       REAL(KIND=c_long_double) :: CR_RSQRTL
     END FUNCTION CR_RSQRTL
#endif
#ifndef __NVCOMPILER
     PURE FUNCTION CR_RSQRTQ(X) BIND(C,NAME='cr_rsqrtq')
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL128
       IMPLICIT NONE
       REAL(KIND=REAL128), INTENT(IN), VALUE :: X
       REAL(KIND=REAL128) :: CR_RSQRTQ
     END FUNCTION CR_RSQRTQ
#endif
  END INTERFACE CR_RSQRT
#endif
#ifdef USE_NATIVE
#define CR_HYPOT HYPOT
#else
  INTERFACE CR_HYPOT
     PURE FUNCTION CR_HYPOTF(X, Y) BIND(C,NAME='cr_hypotf')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_float
       IMPLICIT NONE
       REAL(KIND=c_float), INTENT(IN), VALUE :: X, Y
       REAL(KIND=c_float) :: CR_HYPOTF
     END FUNCTION CR_HYPOTF
     PURE FUNCTION CR_HYPOTD(X, Y) BIND(C,NAME='cr_hypot')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_double
       IMPLICIT NONE
       REAL(KIND=c_double), INTENT(IN), VALUE :: X, Y
       REAL(KIND=c_double) :: CR_HYPOTD
     END FUNCTION CR_HYPOTD
#ifdef __GFC_REAL_10__
     PURE FUNCTION CR_HYPOTL(X, Y) BIND(C,NAME='cr_hypotl')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_long_double
       IMPLICIT NONE
       REAL(KIND=c_long_double), INTENT(IN), VALUE :: X, Y
       REAL(KIND=c_long_double) :: CR_HYPOTL
     END FUNCTION CR_HYPOTL
#endif
#ifndef __NVCOMPILER
     PURE FUNCTION CR_HYPOTQ(X, Y) BIND(C,NAME='cr_hypotq')
       USE, INTRINSIC :: ISO_FORTRAN_ENV, ONLY: REAL128
       IMPLICIT NONE
       REAL(KIND=REAL128), INTENT(IN), VALUE :: X, Y
       REAL(KIND=REAL128) :: CR_HYPOTQ
     END FUNCTION CR_HYPOTQ
#endif
  END INTERFACE CR_HYPOT
#endif
